tests/fixtures/constrained_core_methods.out
info: Typechecking...
error: Revealed type is: Array::[Integer]

        @ __ROOT__/tests/fixtures/constrained_core_methods.rb:4
      4 |    reveal_type [1, nil, 3].compact
                         ^^^^^^^^^^^^^^^^^^^ expression

error: Revealed type is: Array::[Integer]

        @ __ROOT__/tests/fixtures/constrained_core_methods.rb:9
      9 |    reveal_type [nil, 2, 3].compact
                         ^^^^^^^^^^^^^^^^^^^ expression

error: Revealed type is: Array::[Integer]

        @ __ROOT__/tests/fixtures/constrained_core_methods.rb:14
     14 |    reveal_type [1, 2, 3].compact
                         ^^^^^^^^^^^^^^^^^ expression

error: Revealed type is: Hash::[String, Integer]

        @ __ROOT__/tests/fixtures/constrained_core_methods.rb:19
     19 |    reveal_type [["one", 1], ["two", 2]].to_h
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expression

error: Could not match types:

        @ (builtin stdlib):###
    ### |    def to_h[K, V; ElementType : [K, V]] => { K => V }; end
                                          ^^^^^^ [t3, t4], with:
        @ __ROOT__/tests/fixtures/constrained_core_methods.rb:24
     24 |    [["one", 1], 2].to_h
                          ^ Integer

        - arising from an attempt to match:

        @ (builtin stdlib):###
    ### |    def to_h[K, V; ElementType : [K, V]] => { K => V }; end
                                          ^^^^^^ [t3, t4], with:
        @ (builtin stdlib):###
    ### |    def to_h[K, V; ElementType : [K, V]] => { K => V }; end
                            ^^^^^^^^^^^ [String, Integer] | Integer
        @ (builtin stdlib):###
    ### |    def to_h[K, V; ElementType : [K, V]] => { K => V }; end
                            ^^^^^^^^^^^^^^^^^^^^ in this expression
